--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body {
    font-size: 19px;
+   max-width:500px;
+   margin:auto;
 }
+
 table{
    width: 50%;
    margin: 30px auto;
    border-collapse: collapse;
-   text-align: left;
+   text-align: center;
 }
 tr {
    border-bottom: 1px solid #cbcbcb;
@@ -20,22 +23,24 @@ tr:hover {
 }
 
 form {
-   width: 100%;
-   margin: 50px auto;
-   text-align: left;
-   padding: 20px; 
-   border: 1px solid #bbbbbb; 
+   /* width: 100%; */
+   /* margin: 50px auto; */
+   /* text-align: left; */
+   /* padding: 20px;  */
+   /* border: 1px solid #bbbbbb;  */
    border-radius: 5px;
 }
 
 .input-group {
    margin: 10px 0px 10px 0px;
 }
+
 .input-group label {
    display: block;
    text-align: left;
    margin: 3px;
 }
+
 .input-group input {
    height: 30px;
    width: 93%;
@@ -44,6 +49,7 @@ form {
    border-radius: 5px;
    border: 1px solid gray;
 }
+
 .btn {
    padding: 10px;
    font-size: 15px;
@@ -52,6 +58,7 @@ form {
    border: none;
    border-radius: 5px;
 }
+
 .edit_btn {
    text-decoration: none;
    padding: 2px 5px;
@@ -67,6 +74,7 @@ form {
    border-radius: 3px;
    background: #800000;
 }
+
 .msg {
    margin: 30px auto; 
    padding: 10px; 
@@ -76,4 +84,43 @@ form {
    border: 1px solid #3c763d;
    width: 50%;
    text-align: center;
+}
+
+table{
+   max-width:600px;
+   margin:auto;
+}
+
+.title{
+   padding-right:20px;
+}
+
+.title-main{
+   display:flex;
+   justify-content: center;
+}
+
+.title-content{
+   
+   display:flex;
+   flex-direction: row;
+   justify-content: center;
+}
+
+.homepage{
+   padding-left:20px;
+}
+
+.content{
+   
+   margin:auto;
+}
+
+
+
+.contact-list{
+   
+   width:100%;
+   margin:auto;
+
 }
